[gd_scene load_steps=3 format=3 uid="uid://cea36tejoa3sp"]

[ext_resource type="Script" path="res://Scripts/main_menue.gd" id="1_og3yx"]
[ext_resource type="Texture2D" uid="uid://b54lt2nq26i5q" path="res://Art/BackGround/title_ugly.png" id="2_uc1ms"]

[node name="Main_menue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_og3yx")

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 581.0
offset_top = 571.0
offset_right = -397.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "START"

[node name="Credits" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 776.0
offset_top = 571.0
offset_right = -202.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "CREDIT"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 965.0
offset_top = 571.0
offset_right = -13.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "QUIT"

[node name="Credits_screen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1584723, 0.15847233, 0.1584723, 1)

[node name="Title" type="Label" parent="Credits_screen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -106.0
offset_top = 46.0
offset_right = 106.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "CREDITS"

[node name="Label" type="Label" parent="Credits_screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.245
anchor_top = 0.30600002
anchor_right = 0.418
anchor_bottom = 0.44000003
offset_left = -0.23999023
offset_top = -0.28800964
offset_right = -0.53601074
offset_bottom = -0.120025635
theme_override_font_sizes/font_size = 30
text = "3D Artist: Tiffany Tran"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="Credits_screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.245
anchor_top = 0.30600002
anchor_right = 0.418
anchor_bottom = 0.44000003
offset_left = -11.23999
offset_top = 157.71199
offset_right = 10.463989
offset_bottom = 157.87997
theme_override_font_sizes/font_size = 30
text = "Programmer: Leeann Gaona"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label4" type="Label" parent="Credits_screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.245
anchor_top = 0.30600002
anchor_right = 0.418
anchor_bottom = 0.44000003
offset_left = 350.76
offset_top = 157.71199
offset_right = 394.464
offset_bottom = 157.87997
theme_override_font_sizes/font_size = 30
text = "Programmer: Joseph Bucholtz"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="Credits_screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.521
anchor_top = 0.30600002
anchor_right = 0.78900003
anchor_bottom = 0.46500003
offset_left = -0.1920166
offset_top = -0.28800964
offset_right = 0.07196045
offset_bottom = -0.32000732
theme_override_font_sizes/font_size = 30
text = "GD / Produccer: Tom√°s Heredia"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="Credits_screen"]
layout_mode = 0
offset_left = 991.0
offset_top = 547.0
offset_right = 1109.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.92941177)
z_index = -1
position = Vector2(577.00006, 328.00003)
scale = Vector2(0.6114583, 0.6240741)
texture = ExtResource("2_uc1ms")

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits_screen/Button" to="." method="_on_button_pressed"]
